# mmdflux

./: .agent-prompt.md  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Justfile  LICENSE  README.md  boundaries.toml
.claude/: settings.json
.config/: nextest.toml
.zed/: settings.json
docs/: ARCHITECTURE.md  CLASS_DIAGRAM_SUPPORT.md  CLI_REFERENCE.md  DEBUG.md  EDGE_ROUTING_PRD.md  LIBRARY.md  ORTHOGONAL_ROUTING_PROMOTION.md  RELEASING.md  UNIFIED_ISSUES.md  UNIFIED_ROUTING_PROMOTION.md  WASM.md  edge-routing-heuristics.md  gallery.md  mmds.md  mmds.schema.json  orthogonal_feedback_baseline.tsv  unified_analysis_raw.json  unified_deep_analysis.json  unified_feedback_baseline.tsv
examples/: high_level_render.rs  mmds_replay.rs  registry_adapter.rs
mmdflux-plugin/: .lsp.json
plans/: CLAUDE.md
research/: asciiflow-analysis.md  mermaid-ascii-analysis.md  mermaid-js-analysis.md
scripts/: check-wasm-size.sh  compare-binaries.sh  compare-dagre.sh  compare-mermaid.sh  diff-layout.py  dump-dagre-borders.js  dump-dagre-layout.js  dump-dagre-order.js  dump-dagre-pipeline.js  experiment-gallery  generate-gallery.sh  generate-rust-module-deps-c4.py  generate-rust-module-deps-pivot.py  generate-rust-module-deps-scc.py  generate-rust-module-deps.py  mmds-to-dagre-input.jq  refresh-parity-fixtures.sh  refresh-readme-assets.sh  run-wasm-browser-tests.sh  setup-debug-deps.sh  svg-gallery  svg-gallery-diff  view
src/: builtins.rs  config.rs  diagram.rs  errors.rs  format.rs  frontends.rs  json.rs  lib.rs  lint.rs  main.rs  mmds.rs  payload.rs  registry.rs  simplification.rs  style.rs
tests/: architecture_guards.rs  cli.rs  (+45 more)
(+747 files in other folders)
