[package]
name = "mmdflux"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
pest = "2.7"
pest_derive = "2.7"
petgraph = { version = "0.6", default-features = false, features = ["stable_graph"] }
thiserror = "2"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
