[package]
name = "mmdflux"
version = "0.1.0"
edition = "2024"
default-run = "mmdflux"

[dependencies]
clap = { version = "4", features = ["derive"] }
pest = "2.7"
pest_derive = "2.7"
petgraph = { version = "0.6", default-features = false, features = [
    "stable_graph",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
regex = "1.12.2"
