[package]
name = "mmdflux"
version = "1.0.1"
edition = "2024"
default-run = "mmdflux"
description = "Render Mermaid diagrams as Unicode text, ASCII, SVG, and MMDS JSON."
license = "MIT"
readme = "README.md"
repository = "https://github.com/kevinswiber/mmdflux"
homepage = "https://github.com/kevinswiber/mmdflux"
documentation = "https://docs.rs/mmdflux"
keywords = ["mermaid", "diagram", "cli", "svg", "text"]

[dependencies]
clap = { version = "4", features = ["derive"] }
pest = "2.7"
pest_derive = "2.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[features]
default = []
engine-elk = []

[dev-dependencies]
assert_cmd = "2"
jsonschema = "0.41"
predicates = "3"
regex = "1.12.2"
